# XPEREngine

./: .gitignore  CMakeLists.txt  LocalPaths.cmake  README.md
Editor/: CMakeLists.txt  EngineBindings.cs  Form1.Designer.cs  Form1.cs
Engine/: CMakeLists.txt  main.cpp
Engine/Core/: Engine.cpp  Engine.h  GameTimer.h  InputManager.cpp  InputManager.h  PlayerController.h  PlayerInputManager.cpp  PlayerInputManager.h  ResourceManager.cpp  ResourceManager.h  WindowManager.cpp  WindowManager.h
Engine/Core/Helpers/: Constants.h  Debug.h  Defines.h  Utils.h
Engine/Core/Rendering/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.h  MatParams.cpp  MatParams.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderStages.cpp  RenderStages.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  Shader.cpp  ShaderProgramManager.cpp  ShaderProgramManager.h  Transform.cpp  Transform.h
Engine/Core/Rendering/Graphics/: Cubemap.cpp  Cubemap.h  DebugOpenGL.cpp  DebugOpenGL.h  Framebuffer.cpp  Framebuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Engine/Core/Rendering/Graphics/Misc/: ShaderSetFuncImpl.h  ShaderUniformFuncHelper.h
Engine/Core/Rendering/Misc/: ShaderSetFuncImpl.h
Engine/Shaders/: bloom_blur.frag  bloom_blur.vert  bloom_brightness_extraction.frag  bloom_brightness_extraction.vert  color_shader.frag  defered_dn_mat.frag  defered_dn_mat.vert  defered_dnh_mat.frag  defered_dnh_mat.vert  defered_ds_mat.frag  defered_dsn_mat.frag  defered_dsn_mat.vert  defered_dsnh_mat.frag  defered_dsnh_mat.vert  depthmap.frag  depthmap.geom  depthmap.vert  diffuse_shader.frag  diffuse_specular_normal_height_shader.frag  diffuse_specular_normal_shader.frag  diffuse_specular_shader.frag  forward_color_mat.frag  forward_color_mat.vert  geometry_d_mat.frag  lighting_ambient.frag  lighting_ambient.vert  lighting_diffspec.frag  lighting_diffspec.vert  lighting_ssao_base.frag  lighting_ssao_base.vert  lighting_ssao_blur.frag  lighting_ssao_blur.vert  postprocess.frag  postprocess.vert  shader_color.frag  shader_color.vert  shader_d.frag  shader_dn.frag  shader_dn.vert  shader_dnh.frag  (+11 more)
EngineTest/: CMakeLists.txt  test_main.cpp
src/: main.cpp
src/Core/: Engine.cpp  Engine.h  InputManager.h  WindowManager.cpp  WindowManager.h
src/Core/Helpers/: Debug.h  Defines.h  Utils.h
src/Core/Rendering/: Shader.cpp  Shader.h  ShaderUniformFuncHelper.h
src/Core/Rendering/Misc/: ShaderUniformFuncHelper.h
tests/: main.cpp
